# Guzergah_SDT

./: README.md  my_map.pgm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/nav2_map_server/lib/nav2_map_server/: costmap_filter_info_server  map_saver_cli  map_saver_server  map_server
install/nav2_map_server/share/nav2_map_server/: package.sh
install/openslam_gmapping/share/openslam_gmapping/: local_setup.sh  package.sh
install/rf2o_laser_odometry/share/rf2o_laser_odometry/: package.sh
install/sdt_project/lib/sdt_project/: TCP_com.py  UI_try.py  deneme_pid2.py  diff_node.py  engel_video.py  line_follow_main.py  line_follower.py  line_try.py  manuel_kumanda.py  map.py  navigation.py  navigation_1.py  navigation_3.py  navigation_4.py  pid_library.py  pid_line_follow.py  pid_line_follower.py  pid_line_follower_v.21.py  pub_try.py  try.py  (+4 more)
line_follow/: deneme_pıd2.py
log/: latest_build  latest_list
src/log/: latest_build
src/sdt_project/: CMakeLists.txt
src/sdt_project/config/turtlebot3_cartographer/config/: turtlebot3_lds_2d.lua
src/sdt_project/launch/: SLAM.launch.py  mission2.launch.py  mission3.launch.py  mission4.launch.py  node_start.launch.py
src/sdt_project/msg/: MotorValues.msg  SensorValues.msg
src/sdt_project/src/: TCP_com.py  UI_com.py  UI_nworking.py  UI_try.py  deneme_pid2.py  diff_node.py  engel_video.py  line_follow_main.py  line_follower.py  line_follower_old.py  line_try.py  linetry.py  manuel_kumanda.py  map.py  navigation.py  navigation_1.py  navigation_2.py  navigation_4.py  pid_line_follow.py  pid_line_follow_v2.0.py  pid_line_follower.py  pid_line_follower_old.py  pid_line_follower_v.21.py  pub_try.py  qr_detect.py  qr_mask.py  sensor_deneme.py  subtry.py  tf_brodcast.py  usb2_sensor.py  usb_com.py  uı_rry.py
src/sdt_project/yamls/: tf.yaml
(+50 files in other folders)
